--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.2",
     "@tabler/icons-react": "^3.31.0",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.5.0",
     "mongoose": "^8.12.1",
