--- a/package.json
+++ b/package.json
@@ -23,15 +23,23 @@
     "@tabler/icons-react": "^3.31.0",
     "axios": "^1.8.3",
     "bcrypt": "^5.1.1",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "framer-motion": "^12.5.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.482.0",
+    "mailer": "^0.6.7",
     "mongoose": "^8.12.1",
     "motion": "^12.5.0",
     "next": "15.2.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "node": "^20.19.0",
+    "nodemailer": "^6.10.0",
+    "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -49,7 +57,11 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^5.0.2",
+    "@types/canvas-confetti": "^1.9.0",
+    "@types/ejs": "^3.1.5",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.0.11",
     "@types/react-dom": "^19",
     "eslint": "^9",
