--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "nodemailer": "^6.10.0",
     "path": "^0.12.7",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
@@ -72,10 +71,11 @@
     "recharts": "^2.15.1",
     "sonner": "^2.0.2",
     "sweetalert2": "^11.17.2",
-    "tailwind-merge": "^3.0.2",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
