--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -43,6 +45,7 @@
     "bcrypt": "^5.1.1",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
@@ -50,6 +53,7 @@
     "ejs": "^3.1.10",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.7.4",
+    "fs": "^0.0.1-security",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.482.0",
@@ -88,6 +92,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.0.11",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
     "prettier": "^3.5.3",
