--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "nodemailer": "^6.10.0",
     "path": "^0.12.7",
     "react": "^19.0.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
